show options inline, increase size of i icon, fix i icon alignment, gave i icon a cursor help

--- a/app/assets/stylesheets/questionnaire.scss
+++ b/app/assets/stylesheets/questionnaire.scss
@@ -2,8 +2,10 @@ $u-can-act-grey: #99b5cd;
 .mentor, .student {
   .tooltip {
     color: $u-can-act-grey;
-    font-size: 100%;
+    font-size: 175%;
     padding-left: 3px;
+    vertical-align: middle;
+    cursor: help;
   }
   .toast {
     background-color: $u-can-act-grey;
@@ -54,5 +56,8 @@ $u-can-act-grey: #99b5cd;
   .btn.expandable_button {
     margin-right: 10px;
     margin-bottom: 10px;
+  }
+  input[type="checkbox"] + label, input[type="radio"] + label {
+    display: inline;
   }
 }
